apps/authentik/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    gateway-access: private
    security.yiannis.io/require-harbor: "true"
