apps/authentik/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/component: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: authentik
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
      - port: "9443"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/instance: authentik
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: authentik
    toPorts:
    - ports:
      - port: "1"
        endPort: 65535
        protocol: TCP
      - port: "1"
        endPort: 65535
        protocol: UDP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: authentik
        app.kubernetes.io/name: postgresql
        cnpg.io/cluster: authentik-database
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
